plugins {
    id 'java'
    id 'application'
}

version '1.0-SNAPSHOT'

mainClassName = 'MovieDB'

sourceCompatibility = 12

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}


test {
    jvmArgs(['--enable-preview'])
}

run {
    jvmArgs(['--enable-preview'])
}